@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:33:40 brook Exp $
+
+R_PKGNAME=	remotes
+R_PKGVER=	2.1.0
+CATEGORIES=	devel
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	R package installation from remote repositories, including 'GitHub'
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
